Update contact information in contact.html

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
         educational robots, embedded systems and human-robot interaction.
       </p>
       <ul class="contact-list">
-        <li><i class="fa-solid fa-envelope"></i> <span>your.email@example.com</span></li>
-        <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com" target="_blank">LinkedIn profile</a></li>
+        <li><i class="fa-solid fa-envelope"></i> <span>alibadshah.robo@gmail.com</span></li>
+        <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">LinkedIn profile</a></li>
         <li><i class="fa-brands fa-github"></i> <a href="https://github.com/BadshahAli-Robo" target="_blank">GitHub: BadshahAli-Robo</a></li>
       </ul>
     </div>
