Update photo caption text in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="assets/img/profile.jpg" alt="Ali Badshah portrait" />
           </div>
           <div class="photo-caption">
-            <p>Building Pia-the-µRSC &amp; Robotic Study Companion (RSC)</p>
+            <p>Building Pia-the-µRSC &amp; Working on Robotic Study Companion (RSC)</p>
           </div>
         </div>
       </div>
