--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ali Badshah | Robotic Engineer To Be..</title>
+  <title>Badshah Robotics</title>
+
+  <!-- FontAwesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header class="site-header">
-    <div class="container nav-container">
+    <div class="nav-container container">
       <div class="logo">
-        <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
+        <div class="logo-icon">
+          <i class="fa-solid fa-robot"></i>
+        </div>
         <span class="logo-text">Badshah Robotics</span>
       </div>
+
       <nav>
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
@@ -29,74 +33,99 @@
     </div>
   </header>
 
-  <main>
+  <!-- MAIN CONTENT -->
+  <main class="page-main container">
+
+    <!-- HERO SECTION -->
     <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-text">
-          <p class="eyebrow">Robotics • Embedded Systems • HRI</p>
+      <div class="hero-grid">
+
+        <!-- LEFT SIDE TEXT -->
+        <div>
+          <div class="eyebrow">Robotics • Embedded Systems • HRI</div>
+
           <h1>Ali Badshah</h1>
           <p class="tagline">Robotic Engineer To Be..</p>
+
           <p class="hero-body">
-            BSc student in Science &amp; Technology (Robotics &amp; Bio-Engineering) at the University of Tartu,
-            building human-friendly companion robots, embedded systems and interactive hardware.
+            BSc student in Science & Technology (Robotics & Bio-Engineering)
+            at the University of Tartu, building human-friendly companion
+            robots, embedded systems and interactive hardware.
           </p>
+
           <div class="hero-actions">
-            <a href="projects.html" class="btn btn-primary">
-              <i class="fa-solid fa-microchip"></i> View Projects
+            <a class="btn btn-primary" href="projects.html">
+              <i class="fa-solid fa-folder"></i> View Projects
             </a>
-            <a href="about.html" class="btn btn-ghost">
+
+            <a class="btn btn-ghost" href="about.html">
               <i class="fa-solid fa-user"></i> More about me
             </a>
           </div>
+
           <div class="hero-links">
             <a href="https://github.com/BadshahAli-Robo" target="_blank">
               <i class="fa-brands fa-github"></i> GitHub
             </a>
-            <a href="https://www.linkedin.com" target="_blank">
+
+            <a href="https://linkedin.com/in/ali-badshah" target="_blank">
               <i class="fa-brands fa-linkedin"></i> LinkedIn
             </a>
           </div>
         </div>
 
+        <!-- RIGHT SIDE IMAGE — CLEAN CIRCLE, NO OVAL -->
         <div class="hero-photo-card">
           <div class="photo-wrapper">
-            <img src="assets/img/profile.jpg" alt="Ali Badshah portrait" />
+            <img src="assets/img/profile.png" alt="Ali Badshah portrait">
           </div>
-          <div class="photo-caption">
-            <p>Building Pia-the-µRSC &amp; Working on Robotic Study Companion (RSC)</p>
-          </div>
+          <p class="photo-caption">
+            Building Pia-the-μRSC & Working on Robotic Study Companion (RSC)
+          </p>
         </div>
+
       </div>
     </section>
 
+    <!-- HIGHLIGHTS -->
     <section class="highlight-strip">
-      <div class="container highlight-grid">
+      <div class="highlight-grid container">
+
         <div class="highlight-item">
-          <span class="highlight-icon"><i class="fa-solid fa-microchip"></i></span>
+          <div class="highlight-icon">
+            <i class="fa-solid fa-robot"></i>
+          </div>
           <h3>Companion Robots</h3>
-          <p>Pia-the-µRSC &amp; RSC v4.1 for playful, motivating study support.</p>
+          <p>Pia-the-µRSC & RSC v4.1 for playful, motivating study support.</p>
         </div>
+
         <div class="highlight-item">
-          <span class="highlight-icon"><i class="fa-solid fa-microphone-lines"></i></span>
+          <div class="highlight-icon">
+            <i class="fa-solid fa-microphone"></i>
+          </div>
           <h3>Embedded HRI</h3>
           <p>Voice, gesture and expressive motion on tiny hardware.</p>
         </div>
+
         <div class="highlight-item">
-          <span class="highlight-icon"><i class="fa-solid fa-gears"></i></span>
+          <div class="highlight-icon">
+            <i class="fa-solid fa-gears"></i>
+          </div>
           <h3>End-to-End Builds</h3>
           <p>From CAD and 3D printing to soldering, wiring and control code.</p>
         </div>
+
       </div>
     </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer class="site-footer">
-    <div class="container footer-content">
-      <p>© <span id="year"></span> Ali Badshah. All rights reserved.</p>
+    <div class="footer-content container">
+      © 2025 Ali Badshah — Badshah Robotics
     </div>
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
   </footer>
+
 </body>
 </html>
