Fix capitalization in photo caption

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="assets/img/profile.png" alt="Ali Badshah portrait">
           </div>
           <p class="photo-caption">
-            Building Pia-the-μRSC & Working on Robotic Study Companion (RSC)
+            Building Pia-the-μRSC & working on Robotic Study Companion (RSC)
           </p>
         </div>
 
