Refactor HTML comments and update image source

--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Badshah Robotics</title>
 
-  <!-- FontAwesome Icons -->
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-
 <body>
 
   <!-- HEADER -->
   <header class="site-header">
     <div class="nav-container container">
+      
       <div class="logo">
-        <div class="logo-icon">
-          <i class="fa-solid fa-robot"></i>
-        </div>
+        <div class="logo-icon"><i class="fa-solid fa-robot"></i></div>
         <span class="logo-text">Badshah Robotics</span>
       </div>
 
@@ -33,6 +31,7 @@
     </div>
   </header>
 
+
   <!-- MAIN CONTENT -->
   <main class="page-main container">
 
@@ -40,7 +39,7 @@
     <section class="hero">
       <div class="hero-grid">
 
-        <!-- LEFT SIDE TEXT -->
+        <!-- LEFT TEXT SECTION -->
         <div>
           <div class="eyebrow">Robotics • Embedded Systems • HRI</div>
 
@@ -74,43 +73,43 @@
           </div>
         </div>
 
-        <!-- RIGHT SIDE IMAGE — CLEAN CIRCLE, NO OVAL -->
+
+        <!-- RIGHT — CLEAN CIRCLE IMAGE (NO OVAL, NO BACKGROUND SHAPES) -->
         <div class="hero-photo-card">
+
           <div class="photo-wrapper">
-            <img src="assets/img/profile.png" alt="Ali Badshah portrait">
+            <img src="assets/img/profile.jpg" alt="Ali Badshah portrait">
           </div>
+
           <p class="photo-caption">
-            Building Pia-the-μRSC & working on Robotic Study Companion (RSC)
+            Building Pia-the-μRSC & Robotic Study Companion (RSC)
           </p>
+
         </div>
 
       </div>
     </section>
+
+
 
     <!-- HIGHLIGHTS -->
     <section class="highlight-strip">
       <div class="highlight-grid container">
 
         <div class="highlight-item">
-          <div class="highlight-icon">
-            <i class="fa-solid fa-robot"></i>
-          </div>
+          <div class="highlight-icon"><i class="fa-solid fa-robot"></i></div>
           <h3>Companion Robots</h3>
           <p>Pia-the-µRSC & RSC v4.1 for playful, motivating study support.</p>
         </div>
 
         <div class="highlight-item">
-          <div class="highlight-icon">
-            <i class="fa-solid fa-microphone"></i>
-          </div>
+          <div class="highlight-icon"><i class="fa-solid fa-microphone"></i></div>
           <h3>Embedded HRI</h3>
           <p>Voice, gesture and expressive motion on tiny hardware.</p>
         </div>
 
         <div class="highlight-item">
-          <div class="highlight-icon">
-            <i class="fa-solid fa-gears"></i>
-          </div>
+          <div class="highlight-icon"><i class="fa-solid fa-gears"></i></div>
           <h3>End-to-End Builds</h3>
           <p>From CAD and 3D printing to soldering, wiring and control code.</p>
         </div>
@@ -119,6 +118,7 @@
     </section>
 
   </main>
+
 
   <!-- FOOTER -->
   <footer class="site-footer">
