--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <section class="page-hero">
     <div class="container">
       <h1>Contact</h1>
-      <p>Let’s talk about robots, HRI or collaboration.</p>
+      <p>Let’s talk about robots, automation, HRI or collaboration.</p>
     </div>
   </section>
 
