--- a/contact.html
+++ b/contact.html
@@ -3,85 +3,98 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Ali Badshah</title>
+  <title>Contact — Ali Badshah</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
-<header class="site-header">
-  <div class="container nav-container">
-    <div class="logo">
-      <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
-      <span class="logo-text">Badshah Robotics</span>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html" class="active">Contact</a>
-    </nav>
-  </div>
-</header>
 
-<main class="page-main">
-  <section class="page-hero">
-    <div class="container">
-      <h1>Contact</h1>
-      <p>Let’s talk about robots, automation, HRI or collaboration.</p>
-    </div>
-  </section>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="nav-container container">
+      <div class="logo">
+        <div class="logo-icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <span class="logo-text">Badshah Robotics</span>
+      </div>
 
-  <section class="container two-column contact-section">
-    <div>
-      <h2>Get in touch</h2>
-      <p>
-        I’m open to internships, project collaborations and conversations around
-        educational robots, embedded systems and human-robot interaction.
-      </p>
-      <ul class="contact-list">
-        <li><i class="fa-solid fa-envelope"></i> <span>alibadshah.robo@gmail.com</span></li>
-        <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">LinkedIn profile</a></li>
-        <li><i class="fa-brands fa-github"></i> <a href="https://github.com/BadshahAli-Robo" target="_blank">GitHub: BadshahAli-Robo</a></li>
-      </ul>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html" class="active">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <div>
-      <h2>Quick message (static)</h2>
-      <p class="muted">
-        This form is static (no backend). You can customise it later with a service like Formspree or Netlify Forms.
-      </p>
-      <form class="contact-form">
-        <label>
-          Name
-          <input type="text" placeholder="Your name" />
-        </label>
-        <label>
-          Email
-          <input type="email" placeholder="you@example.com" />
-        </label>
-        <label>
-          Message
-          <textarea rows="4" placeholder="Tell me a bit about your idea..."></textarea>
-        </label>
-        <button type="button" class="btn btn-primary">Send (not wired yet)</button>
-      </form>
+  <!-- PAGE CONTENT -->
+  <main class="page-main container">
+
+    <section class="page-hero">
+      <h1>Contact Me</h1>
+      <p>If you want to collaborate, ask questions, or discuss robotics, automation or HRI — feel free to reach out.</p>
+    </section>
+
+    <div class="two-column">
+
+      <!-- LEFT SIDE: CONTACT DETAILS -->
+      <div>
+        <h2>Get in touch</h2>
+        <ul class="contact-list">
+          <li><i class="fa-solid fa-envelope"></i> your-email@example.com</li>
+          <li><i class="fa-solid fa-location-dot"></i> Tartu, Estonia</li>
+          <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/" style="color:#22d3ee;">LinkedIn</a></li>
+          <li><i class="fa-brands fa-github"></i> <a href="https://github.com/" style="color:#22d3ee;">GitHub</a></li>
+        </ul>
+      </div>
+
+      <!-- RIGHT SIDE: WORKING CONTACT FORM -->
+      <div class="contact-section">
+        <h2>Quick Message</h2>
+
+        <p style="color:var(--muted); margin-top:-0.2rem;">
+          This form goes directly to your email through Formspree.
+        </p>
+
+        <div class="contact-form">
+
+          <form action="https://formspree.io/f/myzqjaoe" method="POST">
+
+            <label>
+              Name
+              <input type="text" name="name" required>
+            </label>
+
+            <label>
+              Email
+              <input type="email" name="email" required>
+            </label>
+
+            <label>
+              Message
+              <textarea name="message" rows="5" required></textarea>
+            </label>
+
+            <button type="submit" class="btn btn-primary" style="margin-top:1rem; width:100%;">
+              Send Message
+            </button>
+
+          </form>
+
+        </div>
+      </div>
+
     </div>
-  </section>
-</main>
+  </main>
 
-<footer class="site-footer">
-  <div class="container footer-content">
-    <p>© <span id="year"></span> Ali Badshah. All rights reserved.</p>
-  </div>
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
-</footer>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container footer-content">
+      © 2025 Ali Badshah — Built with ❤️ and GitHub Pages
+    </div>
+  </footer>
+
 </body>
 </html>
