Update contact information in contact.html

--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
       <div>
         <h2>Get in touch</h2>
         <ul class="contact-list">
-          <li><i class="fa-solid fa-envelope"></i> your-email@example.com</li>
+          <li><i class="fa-solid fa-envelope"></i> alibadshah.robo@gmail.com</li>
           <li><i class="fa-solid fa-location-dot"></i> Tartu, Estonia</li>
-          <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/" style="color:#22d3ee;">LinkedIn</a></li>
-          <li><i class="fa-brands fa-github"></i> <a href="https://github.com/" style="color:#22d3ee;">GitHub</a></li>
+          <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" style="color:#22d3ee;">LinkedIn</a></li>
+          <li><i class="fa-brands fa-github"></i> <a href="https://github.com/BadshahAli-Robo" style="color:#22d3ee;">GitHub</a></li>
         </ul>
       </div>
 
