Add LinkedIn demo link to LeRobot project section
Added a LinkedIn demo link for the LeRobot project.

--- a/projects.html
+++ b/projects.html
@@ -139,13 +139,21 @@
       <p>
         Built and calibrated one leader and one follower SO-101 arm, where
         the follower replicated the leader's motion to pick and place objects.
+        Demonstrated a working prototype with real-time motion following.
       </p>
       <ul class="tag-list">
         <li>Robotic arms</li>
         <li>Kinematics</li>
         <li>LeRobot</li>
       </ul>
+      <div class="card-links">
+        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_lerobot-lerobot-so101-activity-7340774137021222913-y4Y6?utm_source=share&utm_medium=member_desktop&rcm=ACoAADPk6BsBnK5_V8z7kALfiGrpAFCR9HOnarY"
+           target="_blank">
+          <i class="fa-brands fa-linkedin"></i> LinkedIn Demo
+        </a>
+      </div>
     </article>
+
 
   </section>
 </main>
