Update photo caption for clarity

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
 
           <p class="photo-caption">
-            Building Pia-the-μRSC & working on Robotic Study Companion (RSC)
+            Building Pia-the-μRSC & developing on Robotic Study Companion (RSC)
           </p>
 
         </div>
