Update eyebrow text and photo caption in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- LEFT TEXT SECTION -->
         <div>
-          <div class="eyebrow">Robotics • Embedded Systems • HRI</div>
+          <div class="eyebrow">Robotics • Automation • Embedded Systems • HRI</div>
 
           <h1>Ali Badshah</h1>
           <p class="tagline">Robotic Engineer To Be..</p>
@@ -82,7 +82,7 @@
           </div>
 
           <p class="photo-caption">
-            Building Pia-the-μRSC & developing on Robotic Study Companion (RSC)
+            Building Pia-the-μRSC & developing Robotic Study Companion (RSC)
           </p>
 
         </div>
