Fix LinkedIn URL in index.html
Updated LinkedIn link to the correct URL.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <i class="fa-brands fa-github"></i> GitHub
             </a>
 
-            <a href="https://linkedin.com/in/ali-badshah" target="_blank">
+            <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">
               <i class="fa-brands fa-linkedin"></i> LinkedIn
             </a>
           </div>
