--- a/about.html
+++ b/about.html
@@ -4,22 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Ali Badshah</title>
+
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer" />
 </head>
+
 <body>
+
+<!-- HEADER -->
 <header class="site-header">
-  <div class="container nav-container">
+  <div class="nav-container container">
     <div class="logo">
       <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
       <span class="logo-text">Badshah Robotics</span>
     </div>
+
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About</a>
@@ -29,61 +37,100 @@
   </div>
 </header>
 
-<main class="page-main">
+
+<!-- MAIN CONTENT -->
+<main class="page-main container">
+
+  <!-- PAGE HERO -->
   <section class="page-hero">
-    <div class="container">
-      <h1>About Me</h1>
-      <p>Robotic Engineer To Be..</p>
-    </div>
+    <h1>About Me</h1>
+    <p>Robotics • Embedded Systems • Human–Robot Interaction</p>
   </section>
 
-  <section class="container two-column">
+
+  <!-- TWO COLUMN ABOUT SECTION -->
+  <section class="two-column">
+
+    <!-- LEFT -->
     <div>
-      <h2>Who I am</h2>
-      <p>
-        I am Ali Badshah, a BSc student in Science &amp; Technology at the University of Tartu
-        with a specialisation in Robotics and Bio-Engineering. I enjoy building friendly robots
-        that sit on desks, react to people and make studying less lonely.
+      <h2>Who I Am</h2>
+      <p class="muted">
+        I am a Robotics & Bio-Engineering student at the University of Tartu, working on companion robots, 
+        embedded hardware, and expressive study-support robots like Pia-the-μRSC and the Robotic Study Companion (RSC).
       </p>
-      <p>
-        My work combines embedded systems, 3D-printed mechanisms and human-robot interaction.
-        Recently I have been focusing on the Robotic Study Companion (RSC) and Pia-the-µRSC,
-        improving portability, adaptability and cost-effectiveness.
+
+      <p class="muted">
+        My work blends 3D printing, electronics, firmware, and human-robot interaction to create friendly, 
+        accessible, and reproducible robotic systems for education and research.
       </p>
-      <p>
-        I like to learn by doing: soldering hardware, debugging weird servo behaviour, tuning
-        motion, and documenting everything so others can replicate my builds.
-      </p>
+
+      <h2>Skills & Tools</h2>
+      <ul class="skills-list">
+        <li><i class="fa-solid fa-gear"></i> Embedded Systems (RPi Pico, ESP32, Raspberry Pi)</li>
+        <li><i class="fa-solid fa-robot"></i> HRI / Companion Robots</li>
+        <li><i class="fa-solid fa-screwdriver-wrench"></i> Electronics & Hardware Prototyping</li>
+        <li><i class="fa-solid fa-cube"></i> 3D Printing & CAD</li>
+        <li><i class="fa-solid fa-code"></i> Python, C/C++, MicroPython</li>
+      </ul>
     </div>
 
-    <div>
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li><i class="fa-solid fa-gear"></i> Robotics &amp; embedded systems</li>
-        <li><i class="fa-solid fa-microchip"></i> Microcontrollers (Raspberry Pi Pico, ESP32, Raspberry Pi)</li>
-        <li><i class="fa-solid fa-code"></i> Python, MicroPython, C basics</li>
-        <li><i class="fa-solid fa-cube"></i> CAD &amp; 3D printing (SolidWorks / others)</li>
-        <li><i class="fa-solid fa-wave-square"></i> Digital signal processing foundations</li>
-        <li><i class="fa-solid fa-brain"></i> Human-Robot Interaction &amp; companion robots</li>
-      </ul>
 
-      <h2>Education</h2>
+    <!-- RIGHT -->
+    <div>
       <div class="card-simple">
-        <h3>University of Tartu</h3>
-        <p>BSc in Science &amp; Technology (Robotics &amp; Bio-Engineering)</p>
-        <p class="muted">Tartu, Estonia</p>
+        <h3>Current Focus</h3>
+        <p class="muted">
+          Building Pia-the-μRSC, documenting RSC v4.1 assembly, and designing 
+          more portable study-companion robots.
+        </p>
+      </div>
+
+      <div class="card-simple" style="margin-top: 1rem;">
+        <h3>Education</h3>
+        <p class="muted">BSc Science & Technology (Robotics & Bio-Engineering)</p>
+        <p class="muted">University of Tartu, Estonia</p>
       </div>
     </div>
+
   </section>
+
+
+  <!-- HONORS & AWARDS -->
+  <section style="margin-top: 3rem;">
+    <h2>Honors & Awards</h2>
+
+    <div class="card-simple">
+      <h3><i class="fa-solid fa-award" style="color: var(--accent);"></i> IEEE RO-MAN 2025 — Robot Design Competition</h3>
+
+      <p class="muted">Eindhoven, Netherlands &nbsp;•&nbsp; 25–29 August 2025</p>
+
+      <ul style="color: var(--muted); margin-top: 0.7rem; line-height: 1.6;">
+        <li>Awarded <strong>Best Technical Design</strong> for poster presentation.</li>
+        <li>
+          Conference publication:<br>
+          Matevž Zorec, Farnaz Baksh, Ali Badshah,<br>
+          <em>"Say Hi to the RSC (v4.1), the study buddy you (can) build (and fix)!"</em>.
+        </li>
+      </ul>
+
+      <p style="margin-top: 1rem;">
+        <a href="https://www.ro-man2025.org/awards" target="_blank" style="color: var(--accent);">
+          <i class="fa-solid fa-arrow-up-right-from-square"></i> Award Listing
+        </a>
+      </p>
+    </div>
+  </section>
+
+
 </main>
 
+
+<!-- FOOTER -->
 <footer class="site-footer">
   <div class="container footer-content">
-    <p>© <span id="year"></span> Ali Badshah. All rights reserved.</p>
+    © 2025 Ali Badshah — Badshah Robotics
   </div>
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 </footer>
+
 </body>
 </html>
