Revise personal description and current focus
Updated the description of my studies and current focus to provide more detail and clarity.

--- a/about.html
+++ b/about.html
@@ -55,8 +55,9 @@
     <div>
       <h2>Who I Am</h2>
       <p class="muted">
-        I am a Robotics & Bio-Engineering student at the University of Tartu, working on companion robots, 
-        embedded hardware, and expressive study-support robots like Pia-the-μRSC and the Robotic Study Companion (RSC).
+        I am a Robotics & Bio-Engineering student at the University of Tartu, working on companion robots,
+        embedded hardware, and expressive study-support robots like Pia-the-μRSC and the Robotic Study
+        Companion (RSC).
       </p>
 
       <p class="muted">
@@ -80,8 +81,7 @@
       <div class="card-simple">
         <h3>Current Focus</h3>
         <p class="muted">
-          Building Pia-the-μRSC, documenting RSC v4.1 assembly, and designing 
-          more portable study-companion robots.
+          Building Pia-the-μRSC with improved hardware, CAD redesign, sensor integration, and full documentation for a reproducible, portable study-companion robot.
         </p>
       </div>
 
