--- a/projects.html
+++ b/projects.html
@@ -4,40 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Ali Badshah</title>
-
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
-
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
-<!-- HEADER -->
 <header class="site-header">
   <div class="container nav-container">
     <div class="logo">
       <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
       <span class="logo-text">Badshah Robotics</span>
     </div>
-
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a class="active" href="projects.html">Projects</a>
+      <a href="projects.html" class="active">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
 
 <main class="page-main">
-
   <section class="page-hero">
     <div class="container">
       <h1>Projects</h1>
@@ -51,13 +43,11 @@
     <article class="project-card">
       <h2>Pia-the-µRSC</h2>
       <p class="muted">Portable study-companion robot built on Raspberry Pi Pico.</p>
-
       <p>
-        I am engineering a highly portable and low-cost µ-version of the Robotic Study Companion (RSC)
-        platform. My work includes full CAD redesign, servo-mechanism optimization, sensor integration,
-        firmware development (MicroPython), and complete reproducibility-focused documentation.
+        I am engineering a highly portable and low-cost µ-version of the Robotic Study Companion (RSC) platform.
+        My work includes full CAD redesign, servo-mechanism optimization, sensor integration, firmware development
+        (MicroPython), and complete reproducibility-focused documentation.
       </p>
-
       <ul class="tag-list">
         <li>Raspberry Pi Pico</li>
         <li>Micro servos</li>
@@ -65,7 +55,6 @@
         <li>Sensor integration</li>
         <li>3D printing</li>
       </ul>
-
       <div class="card-links">
         <a href="https://github.com/BadshahAli-Robo/Pia-the-MicroRSC-to-be" target="_blank">
           <i class="fa-brands fa-github"></i> GitHub Repo
@@ -73,25 +62,21 @@
       </div>
     </article>
 
-
     <!-- RSC -->
     <article class="project-card">
       <h2>Robotic Study Companion (RSC)</h2>
-      <p class="muted">Companion robot platform for learning support and HRI research.</p>
-
+      <p class="muted">Companion-robot platform for learning support and HRI research.</p>
       <p>
         Contributed to RSC v4 / v4.1 where I focused on hardware robustness, improved servo mounting,
         cable-management redesign, and detailed assembly documentation—making the platform easier for
         students and researchers to build, maintain, and replicate.
       </p>
-
       <ul class="tag-list">
         <li>HRI</li>
         <li>Neopixels</li>
         <li>Raspberry Pi</li>
         <li>Assembly documentation</li>
       </ul>
-
       <div class="card-links">
         <a href="https://rsc.ee/docs.html" target="_blank">
           <i class="fa-solid fa-book"></i> Documentation
@@ -99,92 +84,73 @@
       </div>
     </article>
 
-
     <!-- SenseCAP Watcher -->
     <article class="project-card">
       <h2>SenseCAP Watcher</h2>
       <p class="muted">Human-detection & gesture-recognition demonstration.</p>
-
       <p>
         Developed a full demonstration pipeline for the SenseCAP Watcher, including gesture-triggered
-        interaction logic and integration concepts for companion robots. Showcased real-time human
-        detection, region-based tracking, and expressive robot responses.
+        interaction logic and integration concepts for companion robots. Showcased real-time human detection,
+        region-based tracking, and expressive robot responses.
       </p>
-
       <ul class="tag-list">
         <li>Computer vision</li>
         <li>Edge AI</li>
-        <li>Interaction demo</li>
       </ul>
-
       <div class="card-links">
-        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_ai-activity-7299841166122913792-ey76" 
-           target="_blank">
+        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_ai-activity-7299841166122913792-ey76" target="_blank">
           <i class="fa-brands fa-linkedin"></i> LinkedIn Post
         </a>
       </div>
     </article>
 
-
-    <!-- Ortomi -->
+    <!-- Ortomi & Others -->
     <article class="project-card">
       <h2>Ortomi & Other Companions</h2>
       <p class="muted">Exploring expressive micro-robots & social-robot design.</p>
-
       <p>
-        Studied Ortomi and other small social robots to understand expressive motion, mechanical
-        simplicity, low-power electronics, and interaction styles. This analysis directly informed
-        the personality, movement patterns, and gesture design for my own companion robots.
+        Studied Ortomi and other small social robots to understand expressive motion, mechanical simplicity,
+        low-power electronics, and interaction styles. This analysis directly informed the personality,
+        movement patterns, and gesture design for my own companion-robot projects.
       </p>
-
       <ul class="tag-list">
         <li>Social robots</li>
-        <li>Expressive motion</li>
         <li>Rapid prototyping</li>
       </ul>
-
       <div class="card-links">
-        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_innovation-activity-7301253669088342018-Em7h"
-           target="_blank">
+        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_innovation-activity-7301253669088342018-Em7h" target="_blank">
           <i class="fa-brands fa-linkedin"></i> LinkedIn Post
         </a>
       </div>
     </article>
 
-
-    <!-- SO-101 -->
+    <!-- SO-101 Arms -->
     <article class="project-card">
       <h2>SO-101 Leader–Follower Arms</h2>
-      <p class="muted">LeRobot Hackathon project: motion-replication robotic arms.</p>
-
+      <p class="muted">LeRobot Hackathon project.</p>
       <p>
-        Built and calibrated one leader and one follower SO-101 robotic arm. I worked on servo alignment,
-        kinematic mapping, control-signal filtering, and real-time motion replication. The follower arm
-        successfully mirrored the leader's movements to pick and place objects in a live demonstration.
+        Built and calibrated one leader and one follower SO-101 robotic arm. The follower replicated the leader’s
+        movements in real-time to perform precise pick-and-place tasks. Demonstrated fully synchronized
+        motion-following using the LeRobot framework.
       </p>
-
       <ul class="tag-list">
         <li>Robotic arms</li>
         <li>Kinematics</li>
-        <li>Motion replication</li>
         <li>LeRobot</li>
       </ul>
-
       <div class="card-links">
-        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_lerobot-lerobot-so101-activity-7340774137021222913-y4Y6"
-           target="_blank">
+        <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_lerobot-lerobot-so101-activity-7340774137021222913-y4Y6" target="_blank">
           <i class="fa-brands fa-linkedin"></i> LinkedIn Demo
         </a>
       </div>
     </article>
 
   </section>
-
 </main>
 
 <footer class="site-footer">
   <div class="container footer-content">
-    © <span id="year"></span> Ali Badshah — Badshah Robotics
+    <p>© <span id="year"></span> Ali Badshah. All rights reserved.</p>
   </div>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
