--- a/index.html
+++ b/index.html
@@ -3,129 +3,139 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Badshah Robotics</title>
+  <title>Badshah Robotics | Home</title>
 
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- Main CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+  />
 </head>
+
 <body>
+<header class="site-header">
+  <div class="container nav-container">
+    <div class="logo">
+      <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
+      <span class="logo-text">Badshah Robotics</span>
+    </div>
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="nav-container container">
+<main class="page-main">
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container hero-grid">
       
-      <div class="logo">
-        <div class="logo-icon"><i class="fa-solid fa-robot"></i></div>
-        <span class="logo-text">Badshah Robotics</span>
+      <!-- TEXT -->
+      <div>
+        <div class="eyebrow">Robotics • Embedded Systems • HRI • CAD • Microcontrollers</div>
+
+        <h1>Ali Badshah</h1>
+        <p class="tagline">Robotic Engineer To Be..</p>
+
+        <p class="hero-body">
+          BSc student in Science & Technology (Robotics & Bio-Engineering) at the
+          University of Tartu, building human-friendly companion robots, embedded
+          systems and interactive hardware.
+        </p>
+
+        <div class="hero-actions">
+          <a href="projects.html" class="btn btn-primary">
+            <i class="fa-solid fa-folder-open"></i> View Projects
+          </a>
+          <a href="about.html" class="btn btn-ghost">
+            <i class="fa-solid fa-user"></i> More about me
+          </a>
+        </div>
+
+        <div class="hero-links">
+          <a href="https://github.com/BadshahAli-Robo" target="_blank">
+            <i class="fa-brands fa-github"></i> GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i> LinkedIn
+          </a>
+        </div>
       </div>
 
-      <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+      <!-- PHOTO -->
+      <div class="hero-photo-card">
+        <div class="photo-wrapper">
+          <img src="assets/img/profile.jpg" alt="Ali Badshah portrait" />
+        </div>
+        <div class="photo-caption">
+          Building Pia-the-µRSC & working on companion-robot design
+        </div>
+      </div>
+
     </div>
-  </header>
+  </section>
 
+  <!-- HIGHLIGHTS -->
+  <section class="highlight-strip">
+    <div class="container highlight-grid">
 
-  <!-- MAIN CONTENT -->
-  <main class="page-main container">
-
-    <!-- HERO SECTION -->
-    <section class="hero">
-      <div class="hero-grid">
-
-        <!-- LEFT TEXT SECTION -->
-        <div>
-          <div class="eyebrow">Robotics • Automation • Embedded Systems • HRI</div>
-
-          <h1>Ali Badshah</h1>
-          <p class="tagline">Robotic Engineer To Be..</p>
-
-          <p class="hero-body">
-            BSc student in Science & Technology (Robotics & Bio-Engineering)
-            at the University of Tartu, building human-friendly companion
-            robots, embedded systems and interactive hardware.
-          </p>
-
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="projects.html">
-              <i class="fa-solid fa-folder"></i> View Projects
-            </a>
-
-            <a class="btn btn-ghost" href="about.html">
-              <i class="fa-solid fa-user"></i> More about me
-            </a>
-          </div>
-
-          <div class="hero-links">
-            <a href="https://github.com/BadshahAli-Robo" target="_blank">
-              <i class="fa-brands fa-github"></i> GitHub
-            </a>
-
-            <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">
-              <i class="fa-brands fa-linkedin"></i> LinkedIn
-            </a>
-          </div>
-        </div>
-
-
-        <!-- RIGHT — CLEAN CIRCLE IMAGE (NO OVAL, NO BACKGROUND SHAPES) -->
-        <div class="hero-photo-card">
-
-          <div class="photo-wrapper">
-            <img src="assets/img/profile.jpg" alt="Ali Badshah portrait">
-          </div>
-
-          <p class="photo-caption">
-            Building Pia-the-μRSC & developing Robotic Study Companion (RSC)
-          </p>
-
-        </div>
-
+      <div class="highlight-item">
+        <div class="highlight-icon"><i class="fa-solid fa-robot"></i></div>
+        <h2>Companion Robots</h2>
+        <p>
+          Designing expressive, human-friendly study-companion robots such as 
+          <strong>Pia-the-µRSC</strong> and <strong>RSC v4.1</strong>. My work focuses on motion 
+          personality, micro-expressions, motivational behaviour, and accessible 
+          interaction systems for learning environments.
+        </p>
       </div>
-    </section>
 
-
-
-    <!-- HIGHLIGHTS -->
-    <section class="highlight-strip">
-      <div class="highlight-grid container">
-
-        <div class="highlight-item">
-          <div class="highlight-icon"><i class="fa-solid fa-robot"></i></div>
-          <h3>Companion Robots</h3>
-          <p>Pia-the-µRSC & RSC v4.1 for playful, motivating study support.</p>
-        </div>
-
-        <div class="highlight-item">
-          <div class="highlight-icon"><i class="fa-solid fa-microphone"></i></div>
-          <h3>Embedded HRI</h3>
-          <p>Voice, gesture and expressive motion on tiny hardware.</p>
-        </div>
-
-        <div class="highlight-item">
-          <div class="highlight-icon"><i class="fa-solid fa-gears"></i></div>
-          <h3>End-to-End Builds</h3>
-          <p>From CAD and 3D printing to soldering, wiring and control code.</p>
-        </div>
-
+      <div class="highlight-item">
+        <div class="highlight-icon"><i class="fa-solid fa-microphone-lines"></i></div>
+        <h2>Embedded HRI</h2>
+        <p>
+          Developing embedded human-robot interaction systems combining gesture 
+          detection, voice input, expressive motion, LEDs, and sensor-driven behaviour. 
+          Specialized in real-time robotics using Raspberry Pi Pico and ESP32.
+        </p>
       </div>
-    </section>
 
-  </main>
+      <div class="highlight-item">
+        <div class="highlight-icon"><i class="fa-solid fa-gears"></i></div>
+        <h2>End-to-End Builds</h2>
+        <p>
+          Full hardware–software pipeline: CAD modeling, 3D printing, mechanical 
+          assembly, servo calibration, sensor integration, wiring, soldering, and 
+          firmware development in MicroPython & C. Focus on reproducible educational robots.
+        </p>
+      </div>
 
-
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="footer-content container">
-      © 2025 Ali Badshah — Badshah Robotics
     </div>
-  </footer>
+  </section>
+
+</main>
+
+<footer class="site-footer">
+  <div class="container footer-content">
+    <p>© <span id="year"></span> Ali Badshah. All rights reserved.</p>
+  </div>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</footer>
 
 </body>
 </html>
