Refactor hero links and social buttons in index.html

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
           </a>
         </div>
 
-        <div class="hero-links">
-          <a href="https://github.com/BadshahAli-Robo" target="_blank">
+        <div class="hero-socials">
+          <a class="btn-social" href="https://github.com/BadshahAli-Robo" target="_blank">
             <i class="fa-brands fa-github"></i> GitHub
           </a>
-          <a href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">
+          <a class="btn-social" href="https://www.linkedin.com/in/ali-badshah-4776aa203/" target="_blank">
             <i class="fa-brands fa-linkedin"></i> LinkedIn
           </a>
         </div>
-      </div>
+
 
       <!-- PHOTO -->
       <div class="hero-photo-card">
